--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/mapbox.js/mapbox.css" />
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="bower_components/mapbox.js/mapbox.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -101,7 +101,9 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/mapbox.js/mapbox.js"></script>
-
+    <script src="bower_components/scroll-trigger/dist/scroll-trigger.js"></script>
+    <script src="bower_components/matchmedia/matchMedia.js"></script>
+    <script src="bower_components/ngSticky/lib/sticky.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -109,6 +111,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/directives/animate-network.js"></script>
+        <script src="scripts/directives/animate-dendogram.js"></script>
+        <script src="scripts/directives/dendogram-people.js"></script>
         <!-- endbuild -->
 </body>
 </html>
