--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
         <script src="scripts/directives/animate-network.js"></script>
         <script src="scripts/directives/animate-dendogram.js"></script>
         <script src="scripts/directives/dendogram-people.js"></script>
+    <script src="scripts/services/fileservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
