before map with true data

--- a/app/index.html
+++ b/app/index.html
@@ -59,16 +59,16 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-3">
-            [LOGO COST]
+            <img src="images/cost_logo.png" class="img-responsive">
           </div>
           <div class="col-sm-3">
-            [LOGO EU Framework Programme]
+            <img src="images/UE.png" class="img-responsive">
           </div>
           <div class="col-sm-3">
 
           </div>
           <div class="col-sm-3">
-            [Menù]
+            <!-- [Menù] -->
           </div>
         </div>
       </div>
@@ -104,6 +104,7 @@
     <script src="bower_components/scroll-trigger/dist/scroll-trigger.js"></script>
     <script src="bower_components/matchmedia/matchMedia.js"></script>
     <script src="bower_components/ngSticky/lib/sticky.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
