--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
             </button>
 
             <a class="navbar-brand" href="#/">
-              <img alt="Brand" src="images/brand.png" />
+              <img class="img-responsive" alt="Brand" src="images/brand.png" />
             </a>
           </div>
 
