--- a/app/index.html
+++ b/app/index.html
@@ -42,11 +42,14 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a href="#/#section1">Respublica Litteraria</a></li>
-              <li><a href="#/#section2">Network</a></li>
-              <li><a href="#/#section3">Interdisciplinarity</a></li>
-              <li><a href="#/#section4">Activities</a></li>
-              <li><a href="#/#section5">More</a></li>
+              
+              <li><a href="#/#section1">1. Objectives</a></li>
+              <li><a href="#/#section2">2. Extent</a></li>
+              <li><a href="#/#section3">3. Disciplinarity</a></li>
+              <li><a href="#/#section4">4. Worked Example</a></li>
+              <li><a href="#/#section5">5. Activities</a></li>
+              <li><a href="#/#section5">6. More</a></li>
+
             </ul>
           </div>
         </div>
@@ -112,10 +115,12 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/directives/animate-network.js"></script>
+        <!-- <script src="scripts/directives/animate-network.js"></script> -->
         <script src="scripts/directives/animate-dendogram.js"></script>
         <script src="scripts/directives/dendogram-people.js"></script>
         <script src="scripts/services/fileservice.js"></script>
+        <script src="scripts/directives/dendogram-wg-people.js"></script>
+        <script src="scripts/directives/animate-dendogram-wg.js"></script>
         <!-- endbuild -->
 </body>
 </html>
