--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,7 @@
         <script src="scripts/services/fileservice.js"></script>
         <script src="scripts/directives/dendogram-wg-people.js"></script>
         <script src="scripts/directives/animate-dendogram-wg.js"></script>
+        <script src="scripts/directives/linechart-letter-distribution.js"></script>
         <!-- endbuild -->
 </body>
 </html>
