--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
         <script src="scripts/directives/dendogram-wg-people.js"></script>
         <script src="scripts/directives/animate-dendogram-wg.js"></script>
         <script src="scripts/directives/linechart-letter-distribution.js"></script>
+        <script src="scripts/directives/map-emlo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
