--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 
             <ul class="nav navbar-nav">
               
-              <li><a class="hidden-md hidden-lg" href="#/#section0" du-smooth-scroll>R:</a><a class="hidden-xs hidden-sm" href="#/#section0" du-smooth-scroll>Report:</a></li>
+              <li><a class="hidden-sm" href="#/#section0" du-smooth-scroll>Report</a></li>
               <li du-scrollspy="section1"><a href="#/#section1" du-smooth-scroll>1. Objectives</a></li>
               <li du-scrollspy="section2"><a href="#/#section2" du-smooth-scroll>2. Extent</a></li>
               <li du-scrollspy="section3"><a href="#/#section3" du-smooth-scroll>3. Disciplinarity</a></li>
@@ -126,6 +126,7 @@
         <script src="scripts/directives/linechart-letter-distribution.js"></script>
         <script src="scripts/directives/map-emlo.js"></script>
         <script src="scripts/directives/legend-communities.js"></script>
+        <script src="scripts/directives/dendogram-people-extended.js"></script>
         <!-- endbuild -->
 </body>
 </html>
