--- a/app/index.html
+++ b/app/index.html
@@ -47,9 +47,9 @@
               <li du-scrollspy="section1"><a href="#/#section1" du-smooth-scroll>1. Objectives</a></li>
               <li du-scrollspy="section2"><a href="#/#section2" du-smooth-scroll>2. Extent</a></li>
               <li du-scrollspy="section3"><a href="#/#section3" du-smooth-scroll>3. Disciplinarity</a></li>
-              <li du-scrollspy="section4"><a href="#/#section4" du-smooth-scroll>4. Worked Example</a></li>
-              <li du-scrollspy="section5"><a href="#/#section5" du-smooth-scroll>5. Activities</a></li>
-              <li du-scrollspy="section6"><a href="#/#section6" du-smooth-scroll>6. More</a></li>
+<!--               <li du-scrollspy="section4"><a href="#/#section4" du-smooth-scroll>4. Worked Example</a></li>
+ -->              <li du-scrollspy="section5"><a href="#/#section5" du-smooth-scroll>4. Activities</a></li>
+              <li du-scrollspy="section6"><a href="#/#section6" du-smooth-scroll>5. More</a></li>
 
             </ul>
           </div>
@@ -105,9 +105,9 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/mapbox.js/mapbox.js"></script>
-    <script src="bower_components/scroll-trigger/dist/scroll-trigger.js"></script>
     <script src="bower_components/matchmedia/matchMedia.js"></script>
     <script src="bower_components/ngSticky/lib/sticky.js"></script>
+    <script src="bower_components/scroll-trigger/dist/scroll-trigger.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angular-scroll/angular-scroll.js"></script>
     <!-- endbower -->
@@ -127,6 +127,7 @@
         <script src="scripts/directives/map-emlo.js"></script>
         <script src="scripts/directives/legend-communities.js"></script>
         <script src="scripts/directives/dendogram-people-extended.js"></script>
+        <script src="scripts/directives/working-groups-dendrogram.js"></script>
         <!-- endbuild -->
 </body>
 </html>
